Fix Settings can't be clicked on non-clippable pages

--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -245,8 +245,9 @@
 }
 
 .has-error {
+	#show-variables,
 	#template-select {
-		opacity: 0;
+		display: none;
 	}
 }
 
